network.tf
data "aws_availability_zones" "available" {
	state = "available"
}

resource "aws_subnet" "public_1" {
    vpc_id                  = aws_vpc.main.id
    cidr_block              = var.public_subnet_cidrs[0]
    availability_zone       = data.aws_availability_zones.available.names[0]
    map_public_ip_on_launch = true

    tags = { Name = "lab007-public-1" }
}

resource "aws_subnet" "public_2" {
    vpc_id                  = aws_vpc.main.id
    cidr_block              = var.public_subnet_cidrs[1]
    availability_zone       = data.aws_availability_zones.available.names[1]
    map_public_ip_on_launch = true

    tags = { Name = "lab007-public-2" }
}

resource "aws_subnet" "private_1" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.private_subnet_cidrs[0]
    availability_zone = data.aws_availability_zones.available.names[0]

    tags = { Name = "lab007-private-1" }
}

resource "aws_subnet" "private_2" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.private_subnet_cidrs[1]
    availability_zone = data.aws_availability_zones.available.names[1]

    tags = { Name = "lab007-private-2" }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    tags   = { Name = "lab007-igw" }
}

resource "aws_eip" "nat" {
    domain = "vpc"
    tags   = { Name = "lab007-nat-eip" }
}

resource "aws_nat_gateway" "main" {
	allocation_id = aws_eip.nat.id
	subnet_id = aws_subnet.public_1.id
	tags = { Name = "Lab-NAT-GW" }
	depends_on = [aws_internet_gateway.main]
}

resource "aws_route_table" "public" {
	vpc_id = aws_vpc.main.id
	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = aws_internet_gateway.main.id
	}
	tags = { Name = "Lab007-Public-RT" }
}

resource "aws_route_table_association" "public_1" {
    subnet_id      = aws_subnet.public_1.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
    subnet_id      = aws_subnet.public_2.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
    }
    tags = { Name = "Lab007-Private-RT" }
}

resource "aws_route_table_association" "private_1" {
    subnet_id      = aws_subnet.private_1.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_2" {
    subnet_id      = aws_subnet.private_2.id
    route_table_id = aws_route_table.private.id
}
